--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-content
+---
+layout: default
+---
+<body>
+
+  <h1>Jeremy Luna</h1>
+  <p>I am a deep learning computer vision researcher</p>
+
+  <h1>Flower Disease Classification</h1>
+  <p>this is more content</p>
+
+</body>
