--- a/index.html
+++ b/index.html
@@ -3,10 +3,59 @@ layout: default
 ---
 <body>
 
-  <h1>Jeremy Luna</h1>
-  <p>I am a deep learning computer vision researcher</p>
+  <h1>Me</h1>
+  <p>I am Jeremy Luna, a deep learning and computer vision researcher.</p>
 
   <h1>Flower Disease Classification</h1>
   <p>this is more content</p>
+
+  <h1>Fourier-Mellin Features</h1>
+
+  <h1>Wavelet Features</h1>
+
+  <h1>Polynormalized Layers</h1>
+
+  <h1>Shortcuts for Fourier Networks</h1>
+  <p>1. You don't need to do any more than one spectral pooling layer.</p>
+  <p>2. Half of the fourier transform is redundant! If only train across half, you no longer need to constrain your variables to represent real spatial values.</p>
+  <p>3. Multiply all intermediate layers once it's trained.</p>
+  <p>But... what good is a network without nonlinearities</p>
+
+  <h1>Deep-Q Learning template for any game</h1>
+
+  <h1>Capstone Website</h1>
+
+  <h1>Fast Turing Machine</h1>
+
+  <h1>Fast BFS</h1>
+  <p>Rubics Cube simulator using quaternions</p>
+
+  <h1>If 2 was Special</h1>
+  <p>what would be prime</p>
+  <p>what would the ulam spiral look like?</p>
+
+  <h1>Interference Pattern</h1>
+
+  <h1>Minecraft Computers</h1>
+
+  <h1>Every Level in a Hasse Diagram is room for Generalization</h1>
+  <p>experiments in python, c++, racket</p>
+
+  <h1>Cellular Automata</h1>
+  <p>images and different rules, contrasted with langston's ant and Conway's Game of Life</p>
+
+  <h1>change combinations calculator</h1>
+
+  <h1>Identifying spatial dimentions</h1>
+
+  <h1>SAT solver</h1>
+
+  <h1>Program Synthesis</h1>
+
+  <h1>Minecraft Computers</h1>
+
+  <h1>Rubiks cubes</h1>
+
+  <h1>Diffe-Hellman Key Generation</h1>
 
 </body>
