Refactored and added catagories

--- a/Deep_Learning.html
+++ b/Deep_Learning.html
@@ -8,6 +8,8 @@ layout: default
 
 <h1>Wavelet Features</h1>
 
+<h1>A Better Local Normalization</h1>
+
 <h1>Polynormalized Layers</h1>
 
 <h1>Shortcuts for Fourier Networks</h1>
