--- a/Recreation.html
+++ b/Recreation.html
@@ -28,3 +28,7 @@ layout: default
 <h1>SAT solver</h1>
 
 <h1>Collat's Conjecture Pattern</h1>
+
+<h1>leaning card tower calculator</h1>
+
+<h1>Birthday Collision Calculator</h1>
