--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <h1>Me</h1>
   <p>I am Jeremy Luna, a deep learning and computer vision researcher.</p>
 
-  <h1>Deep Learning</h1>
+  <h1><a href="https://jeremyluna.github.io/Overview/Deep_Learning">Deep Learning</a></h1>
 
   <h1>Other AI</h1>
 
