hyperlinked and refactored

--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@ layout: default
   <h1>Me</h1>
   <p>I am Jeremy Luna, a deep learning and computer vision researcher.</p>
 
-  <h1><a href="https://jeremyluna.github.io/Overview/Deep_Learning">Deep Learning</a></h1>
+  <h1><a href="https://jeremyluna.github.io/Overview/Deep_Learning/Deep_Learning">Deep Learning</a></h1>
 
-  <h1>Other AI</h1>
+  <h1><a href="https://jeremyluna.github.io/Overview/Other_AI/Other_AI">Other AI</a></h1>
 
-  <h1>Recreational</h1>
-
-  <h1>Capstone Website</h1>
+  <h1><a href="https://jeremyluna.github.io/Overview/Recreation/Recreation">Recreation</a></h1>
 
 </body>
