--- a/Deep_Learning/Deep_Learning.html
+++ b/Deep_Learning/Deep_Learning.html
@@ -2,15 +2,21 @@
 layout: default
 ---
 <h1>Flower Disease Classification</h1>
-<p>this is more content</p>
+<p>This webapp is for identifying plant diseases.</p>
+<ul>
+  <li>A user can use a webcam or upload an image</li>
+  <li>It uses a pretrained implementation of MobileNet to classify</li>
+  <li>https://jeremyluna.github.io/Tensorflow_Sandbox/webapps/flower_classification/flower_classification.html?</li>
+  <li>Identifies 34 classes of disease across roses, pelargonium, and lisianthus</li>
+</ul>
+
+<h1>Polynormalized Layers</h1>
 
 <h1>Fourier-Mellin Features</h1>
 
 <h1>Wavelet Features</h1>
 
 <h1>A Better Local Normalization</h1>
-
-<h1>Polynormalized Layers</h1>
 
 <h1>Shortcuts for Fourier Networks</h1>
 <p>1. You don't need to do any more than one spectral pooling layer.</p>
