--- a/Deep_Learning/Deep_Learning.html
+++ b/Deep_Learning/Deep_Learning.html
@@ -4,11 +4,11 @@ layout: default
 <h1>Flower Disease Classification</h1>
 <p>This webapp is for identifying plant diseases.</p>
 <ul>
-  <li>A user can use a webcam or upload an image</li>
-  <li>It uses a pretrained implementation of MobileNet to classify</li>
-  <li>https://jeremyluna.github.io/Tensorflow_Sandbox/webapps/flower_classification/flower_classification.html?</li>
-  <li>Identifies 34 classes of disease across roses, pelargonium, and lisianthus</li>
+  <li>A user can use a webcam or upload an image.</li>
+  <li>It uses a pretrained implementation of MobileNet to classify.</li>
+  <li>Identifies 34 classes of disease across roses, pelargonium, and lisianthus.</li>
 </ul>
+<a href="https://jeremyluna.github.io/Tensorflow_Sandbox/webapps/flower_classification/flower_classification.html?"></a>
 
 <h1>Polynormalized Layers</h1>
 
