--- a/Other_AI/Other_AI.html
+++ b/Other_AI/Other_AI.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<a href="https://jeremyluna.github.io">Home</a>
 <h1>Identifying spatial dimentions</h1>
 
 <h1>Program Synthesis</h1>
