--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
   <p>I am Jeremy Luna, a deep learning and computer vision researcher.</p>
 
   <h1><a href="https://jeremyluna.github.io/Deep_Learning/Deep_Learning">Deep Learning</a></h1>
-  <p>This work is mostly from my experience in image processing classes and the <a href="#http://faculty.tamucc.edu/mrahnemoonfar/bina/">BINA Computer Vision Lab.</a></p>
+  <p>This work is mostly from my experience in image processing classes and the <a href="http://faculty.tamucc.edu/mrahnemoonfar/bina/">BINA Computer Vision Lab.</a></p>
 
   <h1><a href="https://jeremyluna.github.io/Other_AI/Other_AI">Other AI</a></h1>
   <p>I am also very interested in other intelligence algorithms, especially unsupervised learning or models which don't even require training.</p>
