--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ layout: default
   <p>I am also very interested in other intelligence algorithms, especially unsupervised learning or models which don't even require training.</p>
 
   <h1><a href="https://jeremyluna.github.io/Recreation/Recreation">Recreation</a></h1>
-  <p>I love solving puzzles, and exploring popular math problems.</p>
+  <p>Solving puzzles, exploring popular math problems.</p>
 
 </body>
