--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <body>
 
   <h1>Me</h1>
-  <p>I am Jeremy Luna, a deep learning and computer vision researcher.</p>
+  <p>I am Jeremy Luna, a deep learning and computer vision researcher. Bachelor's in Computer science from Texas A&M University-Corpus Christi</p>
 
   <h1><a href="https://jeremyluna.github.io/Deep_Learning/Deep_Learning">Deep Learning</a></h1>
   <p>This work is mostly from my experience in image processing classes and the <a href="http://faculty.tamucc.edu/mrahnemoonfar/bina/" target="_blank">BINA Computer Vision Lab.</a></p>
