--- a/Deep_Learning/Deep_Learning.html
+++ b/Deep_Learning/Deep_Learning.html
@@ -9,9 +9,9 @@ layout: default
   <li>It uses a pretrained implementation of MobileNet to classify.</li>
   <li>Identifies 34 classes of disease across roses, pelargonium, and lisianthus.</li>
 </ul>
-<img src="rose_bee_test.png" alt="rose bee test">
-<img src="rose_healthy_test.png" alt="rose healthy test">
-<img src="rose_thrips.png" alt="rose thrips test">
+<img src="/Flower_Disease_Classification/rose_bee_test.png" alt="rose bee test">
+<img src="/Flower_Disease_Classification/rose_healthy_test.png" alt="rose healthy test">
+<img src="/Flower_Disease_Classification/rose_thrips.png" alt="rose thrips test">
 
 <h1>Polynormalized Layers</h1>
 
