--- a/Deep_Learning/Deep_Learning.html
+++ b/Deep_Learning/Deep_Learning.html
@@ -10,7 +10,7 @@ layout: default
   <li>Identifies 34 classes of disease across roses, pelargonium, and lisianthus.</li>
 </ul>
 <img src="/Flower_Disease_Classification/rose_bee_test.png" alt="rose bee test">
-<img src="Deep_Learning/Flower_Disease_Classification/rose_healthy_test.png" alt="rose healthy test">
+<img src="../Deep_Learning/Flower_Disease_Classification/rose_healthy_test.png" alt="rose healthy test">
 <img src="#/Flower_Disease_Classification/rose_thrips.png" alt="rose thrips test">
 
 <h1>Polynormalized Layers</h1>
