--- a/Deep_Learning/Deep_Learning.html
+++ b/Deep_Learning/Deep_Learning.html
@@ -10,9 +10,9 @@ layout: default
   <li>Identifies 34 classes of disease across roses, pelargonium, and lisianthus.</li>
 </ul>
 <div style="margin-left: auto; margin-right: auto;">
-<img class="center" src="./Flower_Disease_Classification/rose_healthy_test.png" alt="rose healthy test">
-<img class="center" src="./Flower_Disease_Classification/rose_bee_test.png" alt="rose bee test">
-<img class="center" src="./Flower_Disease_Classification/rose_thrips.png" alt="rose thrips test">
+<img src="./Flower_Disease_Classification/rose_healthy_test.png" alt="rose healthy test">
+<img src="./Flower_Disease_Classification/rose_bee_test.png" alt="rose bee test">
+<img src="./Flower_Disease_Classification/rose_thrips.png" alt="rose thrips test">
 </div>
 
 <h1>Polynormalized Layers</h1>
