--- a/Deep_Learning/Deep_Learning.html
+++ b/Deep_Learning/Deep_Learning.html
@@ -9,7 +9,7 @@ layout: default
   <li>It uses a pretrained implementation of MobileNet to classify.</li>
   <li>Identifies 34 classes of disease across roses, pelargonium, and lisianthus.</li>
 </ul>
-<div style="margin-left: auto; margin-right: auto;">
+<div style="text-align: center">
 <img src="./Flower_Disease_Classification/rose_healthy_test.png" alt="rose healthy test">
 <img src="./Flower_Disease_Classification/rose_bee_test.png" alt="rose bee test">
 <img src="./Flower_Disease_Classification/rose_thrips.png" alt="rose thrips test">
