--- a/Deep_Learning/Deep_Learning.html
+++ b/Deep_Learning/Deep_Learning.html
@@ -9,10 +9,10 @@ layout: default
   <li>It uses a pretrained implementation of MobileNet to classify.</li>
   <li>Identifies 34 classes of disease across roses, pelargonium, and lisianthus.</li>
 </ul>
-<div style="text-align: center">
-<img src="./Flower_Disease_Classification/rose_healthy_test.png" alt="rose healthy test">
-<img src="./Flower_Disease_Classification/rose_bee_test.png" alt="rose bee test">
-<img src="./Flower_Disease_Classification/rose_thrips.png" alt="rose thrips test">
+<div style="text-align:center; height:50%; width:50%">
+  <img src="./Flower_Disease_Classification/rose_healthy_test.png" alt="rose healthy test">
+  <img src="./Flower_Disease_Classification/rose_bee_test.png" alt="rose bee test">
+  <img src="./Flower_Disease_Classification/rose_thrips.png" alt="rose thrips test">
 </div>
 
 <h1>Polynormalized Layers</h1>
