--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 
   <h1><a href="https://jeremyluna.github.io/Deep_Learning/Deep_Learning">Deep Learning</a></h1>
   <p>This work is mostly from my experience in image processing classes and the <a href="http://faculty.tamucc.edu/mrahnemoonfar/bina/" target="_blank">BINA Computer Vision Lab.</a></p>
-  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQlxqWvJIElO5HwElpGRL1NFO5xmzP9ejMmvUy5wEGsftiQ4OwKcVxjyrpT7yeBmLZlidD2lnID2Mmq/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="60%" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQlxqWvJIElO5HwElpGRL1NFO5xmzP9ejMmvUy5wEGsftiQ4OwKcVxjyrpT7yeBmLZlidD2lnID2Mmq/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
   <h1><a href="https://jeremyluna.github.io/Other_AI/Other_AI">Other AI</a></h1>
   <p>I am also very interested in other intelligence algorithms, especially unsupervised learning or models which don't even require training.</p>
