--- a/Timer/timer.html
+++ b/Timer/timer.html
@@ -1,5 +1,6 @@
 <!-- Display the countdown timer in an element -->
 <h1 id="demo"> </h1>
+<img src="https://i.redd.it/58q4zn0ukjq31.jpg" alt="I miss my baby">
 
 <script>
 // Set the date we're counting down to
