--- a/Timer/timer.html
+++ b/Timer/timer.html
@@ -1,6 +1,12 @@
 <!-- Display the countdown timer in an element -->
-<h1 id="demo"> </h1>
+<style media="screen">
+  body{background-color:#cc0099}
+</style>
+
+<center>
+<h1 style="color:pink" id="demo"> </h1>
 <img src="https://i.redd.it/58q4zn0ukjq31.jpg" alt="I miss my baby">
+</center>
 
 <script>
 // Set the date we're counting down to
